--- a/views/Table.ejs
+++ b/views/Table.ejs
@@ -21,8 +21,80 @@
     <br>
     <div class="container">
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-6">
+                <h3 style="text-align: center;">T-2</h3>
+                <br>
+                <div class="scrollable-table">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Column 1</th>
+                                <th>Column 2</th>
+                                
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                              
+                              </tr>
+
+                              <tr>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                               
+                              </tr>
+
+                              <tr>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                              
+                              </tr>
+                            <!-- Add table data here -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <h3 style="text-align: center;">T-1</h3>
+                <br>
+                <div class="scrollable-table">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Column 1</th>
+                                <th>Column 2</th>
+                                
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                
+                              </tr>
+
+                              <tr>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                               
+                              </tr>
+
+                              <tr>
+                                <td>Mark</td>
+                                <td>Otto</td>
+                                
+                              </tr>
+                            <!-- Add table data here -->
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            
+            <div class="col-md-12" style="margin-top: 50px;">
                 <h3 style="text-align: center;">Today</h3>
+                <br>
                 <div class="scrollable-table">
                     <table class="table table-bordered">
                         <thead>
@@ -32,6 +104,11 @@
                                 <th>Column 3</th>
                                 <th>Column 4</th>
                                 <th>Column 5</th>
+                                <th>Column 6</th>
+                                <th>Column 7</th>
+                                <th>Column 8</th>
+                                <th>Column 9</th>
+                                <th>Column 10</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -41,13 +118,10 @@
                                 <td>@mdo</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
-                              </tr>
-
-                              <tr>
-                                <td>Mark</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
                                 <td>Otto</td>
+                                <td>@mdo</td>
                                 <td>@mdo</td>
                               </tr>
 
@@ -57,31 +131,10 @@
                                 <td>@mdo</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
-                              </tr>
-                            <!-- Add table data here -->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h3 style="text-align: center;">Yesterday</h3>
-                <div class="scrollable-table">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                                <th>Column 3</th>
-                                <th>Column 4</th>
-                                <th>Column 5</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Mark</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
                                 <td>Otto</td>
+                                <td>@mdo</td>
                                 <td>@mdo</td>
                               </tr>
 
@@ -91,55 +144,10 @@
                                 <td>@mdo</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
-                              </tr>
-
-                              <tr>
-                                <td>Mark</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
                                 <td>Otto</td>
                                 <td>@mdo</td>
-                              </tr>
-                            <!-- Add table data here -->
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <h3 style="text-align: center;">Day before yesterday</h3>
-                <div class="scrollable-table">
-                    <table class="table table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Column 1</th>
-                                <th>Column 2</th>
-                                <th>Column 3</th>
-                                <th>Column 4</th>
-                                <th>Column 5</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                              </tr>
-
-                              <tr>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                              </tr>
-
-                              <tr>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                                <td>Otto</td>
                                 <td>@mdo</td>
                               </tr>
                             <!-- Add table data here -->
