--- a/views/Table.ejs
+++ b/views/Table.ejs
@@ -22,7 +22,9 @@
     <div class="container">
         <div class="row">
          <div class="col-md-6">
-                <h3 style="text-align: center;">T-2</h3>
+          <% const today = new Date(); %>
+  <% today.setDate(today.getDate() - 2); %>
+  <h3 style="text-align: center;"><%= today.toLocaleDateString() %></h3>
                 <br> 
                 <div class="scrollable-table" style=" max-height: none;">
                     <table class="table table-bordered">
@@ -55,7 +57,9 @@
             </div> 
 
             <div class="col-md-6">
-                <h3 style="text-align: center;">T-1</h3>
+            
+  <% today.setDate(today.getDate() +1); %>
+  <h3 style="text-align: center;"><%= today.toLocaleDateString() %></h3>
                 <br> 
                 <div class="scrollable-table" style=" max-height: none;">
                     <table class="table table-bordered">
@@ -91,44 +95,50 @@
             <% const timePeriods = [
             "00-04", "04-08", "08-10", "10-12", "12-14", "14-16",
             "16-18", "18-20", "20-00"
-        ]; %>
-        
-        <div class="col-md-24" style="margin-top: 50px;">
-            <h3 style="text-align: center;">Today</h3>
+          ]; %>
+          
+          <div class="col-24" style="margin-top: 50px;">
+            <h3 style="text-align: center;"><%= new Date().toLocaleDateString() %></h3>
             <br>
             <div class="scrollable-table" style=" max-height: none;">
-                <table class="table table-bordered" >
-                    <thead>
-                        <tr>
-                            <th>Bank</th>
-                            <% timePeriods.forEach(function(timePeriod) { %>
-                                <th><%= timePeriod %> Count</th>
-                                <th><%= timePeriod %> Amount</th>
-                            <% }) %>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% var banksData = {}; %>
-                        <% Allo.forEach(function(Allo) { %>
-                            <% if (!banksData[Allo.bank]) { %>
-                                <% banksData[Allo.bank] = { Count: [], Amount: [] }; %>
-                            <% } %>
-                            <% banksData[Allo.bank].Count.push(Allo.Count); %>
-                            <% banksData[Allo.bank].Amount.push(Allo.Amount); %>
-                        <% }) %>
-                        <% Object.keys(banksData).forEach(function(bankName) { %>
-                            <tr>
-                                <td><%= bankName %></td>
-                                <% timePeriods.forEach(function(timePeriod) { %>
-                                    <td><%= banksData[bankName].Count[timePeriods.indexOf(timePeriod)] || '' %></td>
-                                    <td><%= banksData[bankName].Amount[timePeriods.indexOf(timePeriod)] || '' %></td>
-                                <% }) %>
-                            </tr>
-                        <% }) %>
-                    </tbody>
-                </table>
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th>Bank</th>
+                    <% timePeriods.forEach(function(timePeriod) { %>
+                      <th><%= timePeriod %> Count</th>
+                      <th><%= timePeriod %> Amount</th>
+                    <% }) %>
+                  </tr>
+                </thead>
+                <tbody>
+                  <% var banksData = {}; %>
+                  <% Allo.forEach(function(Allo) { %>
+                    <% if (!banksData[Allo.bank]) { %>
+                      <% banksData[Allo.bank] = { Count: {}, Amount: {} }; %>
+                    <% } %>
+                    <% banksData[Allo.bank].Count[Allo.time] = Allo.Count; %>
+                    <% banksData[Allo.bank].Amount[Allo.time] = Allo.Amount; %>
+                  <% }) %>
+                  <% Object.keys(banksData).forEach(function(bankName) { %>
+                    <tr>
+                      <td><%= bankName %></td>
+                      <% timePeriods.forEach(function(timePeriod) { %>
+                        <% if (banksData[bankName].Count[timePeriod] !== undefined) { %>
+                          <td><%= banksData[bankName].Count[timePeriod] %></td>
+                          <td><%= banksData[bankName].Amount[timePeriod] %></td>
+                        <% } else { %>
+                          <td>0</td>
+                          <td>0</td>
+                        <% } %>
+                      <% }) %>
+                    </tr>
+                  <% }) %>
+                </tbody>
+              </table>
             </div>
         </div>
+          
         
         
 </div>
